<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"

    tools:context=".CountdownActivity">

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonStart_Pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/buttonStart" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/buttonReset"
            android:visibility="invisible"
            tools:visibility="visible" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/red"
        android:onClick="backToMain"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_margin="44sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer">

        <ProgressBar
            android:id="@+id/progressBarHours"
            android:layout_margin="5sp"
            android:progressBackgroundTint="@color/red"
            android:progressBackgroundTintMode="add"
            android:textAlignment="center"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="90sp"
            android:layout_height="80sp" />

        <ProgressBar
            android:id="@+id/progressBarMinutes"
            android:layout_margin="5sp"
            android:progressBackgroundTint="@color/red"
            android:progressBackgroundTintMode="add"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="90sp"
            android:layout_height="80sp"/>

        <ProgressBar
            android:id="@+id/progressBarSeconds"
            android:layout_margin="5sp"
            android:progressBackgroundTint="@color/red"
            android:progressBackgroundTintMode="add"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="90sp"
            android:layout_height="80sp"/>


    </LinearLayout>

    <ImageButton
        android:id="@+id/ButtonSwitchOffSound"
        android:onClick="switchOffSound"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"

        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <ImageButton
        android:id="@+id/ButtonSwitchOnSound"
        android:onClick="switchOnSound"
        android:layout_width="50sp"
        android:layout_height="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_lock_silent_mode" />

</androidx.constraintlayout.widget.ConstraintLayout>